2009-02-22  Matthias Clasen <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkactivatable.[hc]: Rename gtk_activatable_reset to
	gtk_activatable_sync_action_properties, since the previous name
	was deemed too generic. Update all implementations.

2009-02-19  Ray Strode  <rstrode@redhat.com>

	* gdk/x11/gdkscreen-x11.c
	(monitor_compare_function), (init_randr13):
	After using randr to get a list of monitors,
	sort the list such that the biggest output
	of "cloned" outputs comes first in the list.
	This helps apps that don't generally handle
	overlapping outputs to work better in randr
	clone mode.

2009-02-19  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkwindow-directfb.c
	(gdk_directfb_window_move_resize): looks like being called with
	negative width and height should be interpreted as a move. Fixes
	scrolling and makes popups work to some extent.

	(_gdk_directfb_move_resize_child): formatting.

2009-02-19  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdisplay-directfb.c (gdk_display_open): move the
	call to _gdk_windowing_window_init() up a little. Fixes a crash
	when running on pseudo-color visuals. Thanks to Masse Nicolas for
	pointing this out.

2009-02-19  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkwindow-directfb.c
	(gdk_window_foreign_new_for_display, gdk_directfb_window_new):
	initialize private->impl. Thanks to Masse Nicolas for pointing
	this out.

2009-02-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 572387 – gdm crashes after gtk 2.15.4 upgrade

	* gdk/x11/gdkscreen-x11.c (init_xrandr13): If X is broken and returns
	no monitors, fall back to other multihead init methods, so that we
	at least get one monitor set up.

2009-02-19  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmountoperation.c: sort functions so their order is more
	"standard", some cosmetic cleanup (not changing any code).

2009-02-19  Michael Natterer  <mitch@imendio.com>

	* tests/testgtk.c: add some orientation flipping code to the
	"flipping" test.
